bhushan: changes in textbox loan form

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form [formGroup]="approvalForm">
-        <div class="row justify-content-center ">
+        <div class="row justify-content-center kt-margin-b-25">
             <div class="col-8 bordered">
                 <div class="row head">
                     <div class="col-4">Field</div>
@@ -11,35 +11,47 @@
                     <div class="col-4 form-label">
                         <label for="">Loan Application Form</label>
                     </div>
-                    <div class="col-4 border text-center" >
-                        <img src="../../../../../../../assets/media/icons/correct.svg" [ngClass]="{'cursor-not-allowed':(role !='Appraiser' || this.disable )}" *ngIf="controls.applicationFormForAppraiser.value" 
-                        (click)="approvalOfAppraiser(false,'form')">
-                        <img src="../../../../../../../assets/media/icons/incorrect.svg"  [ngClass]="{'cursor-not-allowed':(role !='Appraiser' || this.disable )}" *ngIf="!controls.applicationFormForAppraiser.value" 
-                        (click)="approvalOfAppraiser(true,'form')">
+                    <div class="col-4 border text-center">
+                        <img src="../../../../../../../assets/media/icons/correct.svg"
+                            [ngClass]="{'cursor-not-allowed':(role !='Appraiser' || this.disable )}"
+                            *ngIf="controls.applicationFormForAppraiser.value"
+                            (click)="approvalOfAppraiser(false,'form')">
+                        <img src="../../../../../../../assets/media/icons/incorrect.svg"
+                            [ngClass]="{'cursor-not-allowed':(role !='Appraiser' || this.disable )}"
+                            *ngIf="!controls.applicationFormForAppraiser.value"
+                            (click)="approvalOfAppraiser(true,'form')">
                     </div>
-                    <div class="col-4 text-center" >
-                        <img src="../../../../../../../assets/media/icons/correct.svg" [ngClass]="{'cursor-not-allowed':(role !='Branch Manager' || this.disable)}" *ngIf="controls.applicationFormForBM.value" 
-                        (click)="approvalOfBM(false,'form')">
-                        <img src="../../../../../../../assets/media/icons/incorrect.svg" [ngClass]="{'cursor-not-allowed':(role !='Branch Manager' || this.disable)}" *ngIf="!controls.applicationFormForBM.value" 
-                        (click)="approvalOfBM(true,'form')">
+                    <div class="col-4 text-center">
+                        <img src="../../../../../../../assets/media/icons/correct.svg"
+                            [ngClass]="{'cursor-not-allowed':(role !='Branch Manager' || this.disable)}"
+                            *ngIf="controls.applicationFormForBM.value" (click)="approvalOfBM(false,'form')">
+                        <img src="../../../../../../../assets/media/icons/incorrect.svg"
+                            [ngClass]="{'cursor-not-allowed':(role !='Branch Manager' || this.disable)}"
+                            *ngIf="!controls.applicationFormForBM.value" (click)="approvalOfBM(true,'form')">
                     </div>
                 </div>
                 <div class="row body border-top-bottom">
                     <div class="col-4 form-label">
                         <label>Gold Valuation</label>
                     </div>
-                    <div class="col-4 border text-center" >
-                        <img src="../../../../../../../assets/media/icons/correct.svg" [ngClass]="{'cursor-not-allowed':(role !='Appraiser' || this.disable)}" *ngIf="controls.goldValuationForAppraiser.value" 
-                        (click)="approvalOfAppraiser(false,'gold')" >
-                        <img src="../../../../../../../assets/media/icons/incorrect.svg" [ngClass]="{'cursor-not-allowed':(role !='Appraiser' || this.disable)}" *ngIf="!controls.goldValuationForAppraiser.value" 
-                        (click)="approvalOfAppraiser(true,'gold')">
+                    <div class="col-4 border text-center">
+                        <img src="../../../../../../../assets/media/icons/correct.svg"
+                            [ngClass]="{'cursor-not-allowed':(role !='Appraiser' || this.disable)}"
+                            *ngIf="controls.goldValuationForAppraiser.value"
+                            (click)="approvalOfAppraiser(false,'gold')">
+                        <img src="../../../../../../../assets/media/icons/incorrect.svg"
+                            [ngClass]="{'cursor-not-allowed':(role !='Appraiser' || this.disable)}"
+                            *ngIf="!controls.goldValuationForAppraiser.value"
+                            (click)="approvalOfAppraiser(true,'gold')">
 
                     </div>
-                    <div class="col-4 text-center" >
-                        <img src="../../../../../../../assets/media/icons/correct.svg" [ngClass]="{'cursor-not-allowed':(role !='Branch Manager' || this.disable )}" *ngIf="controls.goldValuationForBM.value" 
-                        (click)="approvalOfBM(false,'gold')" disabled>
-                        <img src="../../../../../../../assets/media/icons/incorrect.svg" [ngClass]="{'cursor-not-allowed':(role !='Branch Manager' || this.disable)}" *ngIf="!controls.goldValuationForBM.value" 
-                        (click)="approvalOfBM(true,'gold')" disabled>
+                    <div class="col-4 text-center">
+                        <img src="../../../../../../../assets/media/icons/correct.svg"
+                            [ngClass]="{'cursor-not-allowed':(role !='Branch Manager' || this.disable )}"
+                            *ngIf="controls.goldValuationForBM.value" (click)="approvalOfBM(false,'gold')" disabled>
+                        <img src="../../../../../../../assets/media/icons/incorrect.svg"
+                            [ngClass]="{'cursor-not-allowed':(role !='Branch Manager' || this.disable)}"
+                            *ngIf="!controls.goldValuationForBM.value" (click)="approvalOfBM(true,'gold')" disabled>
 
                     </div>
                 </div>
@@ -48,36 +60,51 @@
                         <label for="">Final Status</label>
                     </div>
                     <div class="col-4 border text-center select">
-                        <select class="form-control " formControlName="loanStatusForAppraiser" (change)="statusAppraiser()"
-                        [class.isError]="controls.loanStatusForAppraiser.invalid && controls.loanStatusForAppraiser.touched">
+                        <select class="form-control " formControlName="loanStatusForAppraiser"
+                            (change)="statusAppraiser()"
+                            [class.isError]="controls.loanStatusForAppraiser.invalid && controls.loanStatusForAppraiser.touched">
                             <option [value]="" [disabled]="true" [selected]="true">Select Status</option>
-                            <option [value]="status.value" *ngFor="let status of appraiser">{{status.name | titlecase}}</option>
+                            <option [value]="status.value" *ngFor="let status of appraiser">{{status.name | titlecase}}
+                            </option>
                         </select>
-                        <mat-error *ngIf="controls.loanStatusForAppraiser.invalid && controls.loanStatusForAppraiser.touched">Field Required</mat-error>
+                        <mat-error
+                            *ngIf="controls.loanStatusForAppraiser.invalid && controls.loanStatusForAppraiser.touched">
+                            Field Required</mat-error>
                     </div>
                     <div class="col-4 text-center select">
                         <select class="form-control" formControlName="loanStatusForBM" (change)="statusBM()"
-                        [class.isError]="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
+                            [class.isError]="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
                             <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
-                            <option [value]="status.value" *ngFor="let status of branchManager">{{status.name | titlecase}}</option>
+                            <option [value]="status.value" *ngFor="let status of branchManager">
+                                {{status.name | titlecase}}</option>
                         </select>
-                        <mat-error *ngIf="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">Field Required</mat-error>
+                        <mat-error *ngIf="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">Field
+                            Required</mat-error>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center " *ngIf="controls.loanStatusForAppraiser.value == 'pending'">
-            <div class="col-4">
-                <textarea cols="4" rows="4" formControlName="commentByAppraiser" class="form-control"
-                [class.isError]="controls.commentByAppraiser.invalid && controls.commentByAppraiser.touched"></textarea>
-                <mat-error *ngIf="controls.commentByAppraiser.invalid && controls.commentByAppraiser.touched">Field Required</mat-error>
+            <div class="col-8">
+                <mat-form-field class="w-100">
+
+                    <textarea cols="4" rows="3" matInput formControlName="commentByAppraiser"
+                        placeholder="Reason for Pending"></textarea>
+                    <mat-error *ngIf="controls.commentByAppraiser.invalid && controls.commentByAppraiser.touched">Field
+                        Required</mat-error>
+                </mat-form-field>
+
             </div>
         </div>
         <div class="row justify-content-center " *ngIf="controls.loanStatusForBM.value == 'rejected'">
-            <div class="col-4">
-                <textarea cols="4" rows="4" formControlName="commentByBM" class="form-control"
-                [class.isError]="controls.commentByBM.invalid && controls.commentByBM.touched"></textarea>
-                <mat-error *ngIf="controls.commentByBM.invalid && controls.commentByBM.touched">Field Required</mat-error>
+            <div class="col-8">
+                <mat-form-field class="w-100">
+
+                    <textarea cols="4" rows="3" matInput formControlName="commentByBM"
+                        placeholder="Reason for Rejection"></textarea>
+                    <mat-error *ngIf="controls.commentByBM.invalid && controls.commentByBM.touched">Field Required
+                    </mat-error>
+                </mat-form-field>
             </div>
         </div>
     </form>
