--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -90,7 +90,7 @@
 
                     <textarea cols="4" rows="3" matInput formControlName="commentByAppraiser"
                         placeholder="Reason for Pending"></textarea>
-                    <mat-error *ngIf="controls.commentByAppraiser.invalid && controls.commentByAppraiser.touched">Field
+                    <mat-error>Field
                         Required</mat-error>
                 </mat-form-field>
 
@@ -102,7 +102,7 @@
 
                     <textarea cols="4" rows="3" matInput formControlName="commentByBM"
                         placeholder="Reason for Rejection"></textarea>
-                    <mat-error *ngIf="controls.commentByBM.invalid && controls.commentByBM.touched">Field Required
+                    <mat-error>Field Required
                     </mat-error>
                 </mat-form-field>
             </div>
