--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.scss
@@ -2,7 +2,13 @@
     kt-portlet-body {
 		height: 72vh;
         overflow-y: auto;
-	}
+    }
+    ::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
+		color: gray !important;
+	  }
+	  ::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple {
+		background-color: #e3e3e3 !important;
+	  }
     .table-div {
         width: 600px !important;
         margin: 50px auto 20px auto;
