--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -118,7 +118,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1 form-label">
-                                        <label class="mandatory">Occupation</label>
+                                        <label class="">Occupation</label>
                                     </div>
                                     <div class="col-7">
                                         <select name="" id="" formControlName="occupationId" class="form-control"
