--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
@@ -734,7 +734,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="offset-1 col-3 form-label">
-                                <label [class.mandatory]="viewOnly" class=""> Occupation </label>
+                                <label class=""> Occupation </label>
                             </div>
                             <div class="col-7">
                                 <select name="" id="" formControlName="occupationId" class="form-control"
