--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -82,7 +82,7 @@
                                         Number</span>
                                     <span *ngIf="ornament.controls.netWeight.errors?.required">Field Required</span>
                                     <span *ngIf="ornament.controls.netWeight.errors?.weight">
-                                        <small>Gross Weight should be lesser then Net Weight</small>
+                                        <small>Net  Weight should be lesser then Gross  Weight</small>
                                     </span>
                                 </mat-error>
                             </div>
