--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -167,12 +167,14 @@
                     class="col kt-margin-t-20 kt-margin-b-20" style="width: 600px; margin: auto">
                     <mat-form-field class="w-100">
                         <textarea matInput formControlName="reasonFromCce" placeholder="Reason for Pending"></textarea>
+                        <mat-error>Field Required</mat-error>
                     </mat-form-field>
                 </div>
                 <div *ngIf="showTextBoxBM && role== 'Branch Manager'" class="col kt-margin-t-20 kt-margin-b-20"
                     style="width: 600px; margin: auto">
                     <mat-form-field class="w-100">
                         <textarea matInput formControlName="reasonFromBm" placeholder="Reason for Rejection"></textarea>
+                        <mat-error>Field Required</mat-error>
                     </mat-form-field>
                 </div>
                 <div class="col kt-margin-t-20 kt-margin-b-20" style="width: 600px; margin: auto">
