--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
@@ -8,7 +8,7 @@
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="goldGrossWeight"
-                            placeholder="0.00 gram"
+                            placeholder="0.00 gram" (blur)="weightCheck();calcGoldDeductionWeight()"
                             [class.isError]="controls.goldGrossWeight.touched && controls.goldGrossWeight.invalid">
                         <mat-error
                             *ngIf="controls.goldGrossWeight.errors?.required && controls.goldGrossWeight.touched">
@@ -23,10 +23,13 @@
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="goldNetWeight"
-                            placeholder="0.00 gram"
+                            placeholder="0.00 gram" (blur)="weightCheck();calcGoldDeductionWeight()"
                             [class.isError]="controls.goldNetWeight.touched && controls.goldNetWeight.invalid">
                         <mat-error *ngIf="controls.goldNetWeight.errors?.required && controls.goldNetWeight.touched">
                             Required field
+                        </mat-error>
+                        <mat-error *ngIf="controls.goldNetWeight.errors?.weight && controls.goldNetWeight.touched">
+                            <small>Net  Weight should be lesser then Gross  Weight</small>
                         </mat-error>
                     </div>
                 </div>
@@ -35,8 +38,8 @@
                         <label for="" class="mandatory text-color">Gold Deduction Weight </label>
                     </div>
                     <div class="col-6">
-                        <input type="number" class="form-control" formControlName="goldDeductionWeight"
-                            placeholder="0.00 gram"
+                        <input type="text" class="form-control" formControlName="goldDeductionWeight"
+                            placeholder="0.00 gram" readonly
                             [class.isError]="controls.goldDeductionWeight.touched && controls.goldDeductionWeight.invalid">
                         <mat-error
                             *ngIf="controls.goldDeductionWeight.errors?.required && controls.goldDeductionWeight.touched">
