--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -24,10 +24,13 @@
                 <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style"
                     #group="matButtonToggleGroup" value="list" *ngIf="toogle">
                     <mat-button-toggle value="grid" (click)="check('grid')">
-                        <img src="../../../../../assets/media/aside-icons/icons-22.svg">
+                        <img src="../../../../../assets/media/aside-icons/icons-22.svg" class="w-100 pos">
                     </mat-button-toggle>
                     <mat-button-toggle value="list" (click)="check('list')">
-                        <img src="../../../../../assets/media/aside-icons/icons-23.svg">
+                        <!-- <div > -->
+                            <img src="../../../../../assets/media/aside-icons/icons-23.svg" class="w-100 pos">
+
+                        <!-- </div> -->
                     </mat-button-toggle>
                 </mat-button-toggle-group>
             </span>
