--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.scss
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.scss
@@ -1,9 +1,7 @@
 :host {
 	::ng-deep {
-
 		// override default version style
 		.kt-header__topbar {
-
 			// margin-top: 7px !important;
 
 			> :last-child:not([role="tooltip"]) {
@@ -19,7 +17,7 @@
 			.kt-subheader__main {
 				.kt-subheader__title {
 					font-size: 16px !important;
-  					font-weight: 600 !important;
+					font-weight: 600 !important;
 				}
 
 				.kt-subheader__divider {
@@ -34,30 +32,37 @@
 					font-weight: 400;
 				}
 			}
-
 		}
 	}
 
 	.mat-button-toggle-checked {
-		background: #454D67 !important;
+		background: #454d67 !important;
 	}
 
 	mat-button-toggle-group {
-		height       : 35px;
+		height: 35px;
 		border-radius: 4px;
-		padding      : 0px !important;
+		padding: 0px !important;
 	}
 
 	mat-button-toggle {
-		width     : 35px;
-		height    : 35px;
+		width: 35px;
+		height: 35px;
 		background: #c5c6c6 !important;
 
 		padding: 0 !important;
 	}
-	
+
 	.mat-button-toggle-label-content {
 		padding: 0 !important;
-		background: red
+		background: red;
+	}
+	.pos {
+		position: relative;
+		top: 5px;
+		left: 5px;
+	}
+	::ng-deep.mat-toogle-button{
+		background-color: #f2f3f7;
 	}
 }
